Add statistics
